<resources>
    <string name="app_name">ECommerce Application</string>
    <string name="title_home">Home</string>
    <string name="title_user">User</string>
    <string name="title_cart">Your Cart</string>
    <string name="title_filter">Filters</string>
    <string name="category">Category</string>
    <string name="price">Price</string>
    <string name="apply">Apply</string>

    <!-- Filter page -->
    <string name="sort">Sort By</string>
    <string name="price_lth">Price: Low to high</string>
    <string name="price_htl">Price: High to low</string>
    <string name="latest_arrivals">Latest Arrivals</string>

    <!-- Sign-in, Sign-up forms -->
    <string name="email_hint">Enter Email</string>
    <string name="password_hint">Enter Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="username_hint">Enter Username</string>
    <string name="create_account">Create Account</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>

    <!-- User profile buttons list-->
    <string name="profile_wishlist">Your Wishlist</string>
    <string name="profile_account">Your Account</string>
    <string name="profile_address">Saved Addresses</string>
    <string name="profile_payment">Payment Details</string>
    <string name="profile_orders">Your Orders</string>
    <string name="logout">Logout</string>

    <!-- Single Product page-->
    <string name="description">Description</string>
    <string name="out_of_stock">Out of Stock</string>
    <string name="buy_now">Buy now</string>
    <string name="go_to_cart">Go to Cart</string>
    <string name="add_to_cart">Add to Cart</string>

    <!-- Home fragment: Product cards -->
    <string name="show_all">Show all</string>

    <!-- Shopping cart -->
    <string name="save_changes">Save Changes</string>
    <string name="delete">Delete</string>
    <string name="total_cost">Total cost</string>

    <!-- Checkout page -->
    <string name="checkout_title">Checkout page</string>
    <string name="fail_payment">Fail Payment</string>
    <string name="cvv">CVV</string>
    <string name="month">Month</string>
    <string name="card_number">Card number</string>
    <string name="make_payment">Make Payment</string>
    <string name="card_details">Card Details</string>
    <string name="expiry_date">Expiry date</string>
    <string name="name_on_card">Name on Card</string>
    <string name="year">Year</string>
    <string name="cancel_payment">Cancel Payment</string>

    <!-- General strings -->
    <string name="discount">%1$d%% Off</string>
    <string name="price_holder">₹%1$.2f</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sample_string">Sample String</string>
    <string name="to">to</string>
    <string name="profile_picture">Profile picture</string>
    <string name="checkout">Checkout</string>
    <string name="mrp">MRP</string>
    <string name="today_s_deal">Today\'s Deal</string>

</resources>