<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:layout_height="wrap_content">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

        <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/ic_baseline_account_box_24"
                style="@style/login_text_view" />

        <EditText
                android:id="@+id/signup_email"
                style="@style/login_text_view"
                android:hint="@string/email_hint" />

        <EditText
                android:id="@+id/signup_username"
                style="@style/login_text_view"
                android:ems="10"
                android:hint="@string/username_hint" />

        <EditText
                android:id="@+id/signup_password"
                android:inputType="textPassword"
                style="@style/login_text_view"
                android:ems="10"
                android:hint="@string/password_hint" />

        <EditText
                android:id="@+id/signup_confirm_password"
                android:inputType="textPassword"
                style="@style/login_text_view"
                android:ems="10"
                android:hint="@string/confirm_password" />

        <Button
                android:id="@+id/create_account_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/create_account" />
    </LinearLayout>
</ScrollView>