<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/mobile_settings"
        app:startDestination="@+id/navigation_home">

    <fragment
            android:id="@+id/navigation_home"
            android:name="com.example.ecommerceapplication.ui.home.HomeFragment"
            android:label="@string/title_home"
            tools:layout="@layout/fragment_home" >
        <action
                android:id="@+id/action_navigation_home_to_filterFragment"
                app:destination="@id/filterFragment" />
    </fragment>

    <fragment
            android:id="@+id/navigation_user"
            android:name="com.example.ecommerceapplication.ui.user.UserFragment"
            android:label="@string/title_user"
            tools:layout="@layout/fragment_user" />

    <fragment
            android:id="@+id/navigation_settings"
            android:name="com.example.ecommerceapplication.ui.settings.SettingsFragment"
            android:label="@string/title_settings"
            tools:layout="@layout/fragment_settings" />
    <fragment
            android:id="@+id/filterFragment"
            android:name="com.example.ecommerceapplication.ui.home.FilterFragment"
            android:label="@string/title_filter"
            tools:layout="@layout/fragment_filter" />
</navigation>