<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp">

    <ImageView
            android:id="@+id/cart_product_image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:contentDescription="Product Image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/img_not_loaded1_4x"
            tools:ignore="HardcodedText" />

    <TextView
            android:id="@+id/cart_product_title"
            android:layout_width="210dp"
            android:layout_height="65dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="16dp"
            android:text="@string/sample_string"
            android:textColor="@color/black"
            android:textSize="@dimen/large_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.058"
            app:layout_constraintStart_toEndOf="@+id/cart_product_image"
            app:layout_constraintTop_toTopOf="@+id/cart_product_image" />

    <TextView
            android:id="@+id/cart_product_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/price_holder"
            android:textColor="@color/black"
            android:textSize="@dimen/large_text"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/cart_product_title"
            app:layout_constraintTop_toBottomOf="@+id/cart_product_title" />

    <ImageButton
            android:id="@+id/reduce_quantity"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="@color/app_color_2"
            android:contentDescription="Reduce Quantity"
            app:layout_constraintBottom_toBottomOf="@+id/cart_product_price"
            app:layout_constraintEnd_toStartOf="@id/item_quantity"
            app:srcCompat="@drawable/ic_baseline_remove_24"
            tools:ignore="HardcodedText" />

    <ImageButton
            android:id="@+id/add_quantity"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="@color/app_color_2"
            android:contentDescription="Increase Quantity"
            app:layout_constraintBottom_toBottomOf="@+id/cart_product_price"
            app:layout_constraintEnd_toEndOf="@+id/cart_product_title"
            app:srcCompat="@drawable/ic_baseline_add_24"
            tools:ignore="HardcodedText" />

    <TextView
            android:id="@+id/item_quantity"
            android:layout_width="46dp"
            android:layout_height="24dp"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/cart_product_price"
            app:layout_constraintEnd_toStartOf="@+id/add_quantity" />

    <Button
            android:id="@+id/save_changes"
            android:layout_width="wrap_content"
            android:textSize="12sp"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:padding="10dp"
            android:text="@string/save_changes"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="@+id/cart_product_image"
            app:layout_constraintStart_toStartOf="@+id/cart_product_title" />

    <Button
            android:id="@+id/delete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:padding="2dp"
            android:text="@string/delete"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="@+id/cart_product_image"
            app:layout_constraintEnd_toEndOf="@+id/cart_product_title" />

    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="@color/app_color_3"
            app:layout_constraintTop_toBottomOf="@+id/cart_product_image"
            tools:layout_editor_absoluteX="-16dp" />
</androidx.constraintlayout.widget.ConstraintLayout>