<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="@dimen/product_card_width"
        android:layout_height="@dimen/product_card_height"
        android:layout_marginEnd="5dp"
        android:orientation="vertical"
        tools:ignore="NamespaceTypo">

    <ImageView
            android:id="@+id/product_image"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_gravity="top|center_horizontal"
            android:layout_margin="10dp"
            android:contentDescription="@string/app_name"
            app:layout_constraintBottom_toTopOf="@+id/product_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <TextView
            android:id="@+id/product_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:gravity="center"
            android:text="@string/sample_string"
            android:textColor="@color/design_default_color_on_secondary"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/product_price"
            app:layout_constraintTop_toBottomOf="@+id/product_image"
            tools:layout_editor_absoluteX="10dp" />

    <TextView
            android:id="@+id/product_strike_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#808080"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/product_price"
            app:layout_constraintTop_toTopOf="@+id/product_price" />

    <TextView
            android:id="@+id/product_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/product_strike_price"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/product_title" />

    <TextView
            android:id="@+id/discount_text"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="5dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/round"
            android:backgroundTint="@color/cinnabar"
            android:gravity="center"
            android:text="@string/discount"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>